# AI

./: deep learn.docx  深度学习入门.odt
paddle/: main.py
tesseract/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  tesseract_demo1
分类器/: getfile.cpp  分类器.docx  训练分类器
